# rtree

./: Cargo.toml  KEY.gpg  PKGBUILD  README.md
.github/workflows/: apt-repo.yml  release.yml
completions/: _rtree  nt.bash  rtree.fish
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages  Packages.bz2
dists/stable/main/binary-arm64/: Packages  Packages.bz2
pool/main/: newtree_0.2.0-1_amd64.deb  newtree_0.2.0-1_arm64.deb
scripts/: release.sh
src/: icons.rs  main.rs  tui.rs
