[package]
name = "rtree"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "rtree"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
regex = "1"
ratatui = "0.29"
crossterm = "0.28"

[package.metadata.deb]
maintainer = "Marcus Bandit <marcusbanditten@gmail.com>"
copyright = "2026 marcusbandit"
license-file = ["LICENSE", "0"]
extended-description = "A fast tree command with smart pattern filtering and a live-search TUI. Unlike tree's -P flag, rtree prunes the output to only show paths that lead to a match."
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
  ["target/release/rtree", "usr/bin/", "755"],
  ["completions/rtree.bash", "usr/share/bash-completion/completions/rtree", "644"],
  ["completions/_rtree", "usr/share/zsh/site-functions/_rtree", "644"],
  ["completions/rtree.fish", "usr/share/fish/vendor_completions.d/rtree.fish", "644"],
  ["README.md", "usr/share/doc/rtree/README.md", "644"],
]

[profile.release]
opt-level = 3
strip = true
