[package]
name = "newtree"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "nt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
regex = "1"
ratatui = "0.29"
crossterm = "0.28"
rayon = "1"
phf = { version = "0.11", features = ["macros"] }

[package.metadata.deb]
maintainer = "Marcus Bandit <marcusbanditten@gmail.com>"
copyright = "2026 marcusbandit"
license-file = ["LICENSE", "0"]
extended-description = "A fast tree command with smart pattern filtering and a live-search TUI. Unlike tree's -P flag, newtree prunes the output to only show paths that lead to a match."
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
  ["target/release/nt", "usr/bin/", "755"],
  ["completions/nt.bash", "usr/share/bash-completion/completions/nt", "644"],
  ["completions/_nt", "usr/share/zsh/site-functions/_nt", "644"],
  ["completions/nt.fish", "usr/share/fish/vendor_completions.d/nt.fish", "644"],
  ["README.md", "usr/share/doc/newtree/README.md", "644"],
]

[profile.release]
opt-level = 3
strip = true
